--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SGC TECH AI | AI-Native Enterprise Transformation | 14-Day Deployments</title>
+    
+    <!-- Single Page Apps for GitHub Pages -->
+    <script type="text/javascript">
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
     <meta name="description" content="Transform your enterprise with AI-native technology. 14-day deployments, 150-200% guaranteed ROI. A Scholarix Global Consultants brand delivering intelligent infrastructure with instant impact." />
     <meta name="keywords" content="AI transformation, enterprise ERP, UAE business solutions, Dubai AI consulting, rapid deployment, guaranteed ROI, Scholarix Global" />
     <meta name="author" content="Scholarix Global Consultants" />
