--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SGC TECH AI | AI-Native Enterprise Transformation | 14-Day Deployments</title>
-    <meta name="description" content="Transform your enterprise with AI-native technology. 14-day deployments, 150-200% guaranteed ROI. A Scholarix Global Consultants brand delivering intelligent infrastructure with instant impact." />
+    <meta name="description" content="Machine Speed, Human Expertise, Real Results. Transform your Business in 14 Days with AI Business Advisor native on your system. SGC TECH AI - Intelligent Infrastructure Deployment." />
     <meta name="keywords" content="AI transformation, enterprise ERP, UAE business solutions, Dubai AI consulting, rapid deployment, guaranteed ROI, Scholarix Global" />
     <meta name="author" content="Scholarix Global Consultants" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#1E3A8A" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,13 +20,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800&family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="SGC TECH AI - AI-Native Enterprise Transformation" />
-    <meta property="og:description" content="14-day deployments. 150-200% ROI. Transform your enterprise with intelligent infrastructure." />
+    <meta property="og:description" content="Machine Speed, Human Expertise, Real Results. Transform your Business in 14 Days with AI Business Advisor native on your system." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:image" content="https://50ee2897.ignite-growth-uae.pages.dev/sgc-og.svg" />
+    <meta property="og:image:alt" content="SGC TECH AI - Machine Speed, Human Expertise, Real Results" />
+    <meta property="og:image:type" content="image/svg+xml" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="SGC TECH AI" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@SGCTECHAI" />
-    <meta name="twitter:image" content="/og-image.jpg" />
+    <meta name="twitter:image" content="https://50ee2897.ignite-growth-uae.pages.dev/sgc-og.svg" />
+    <meta name="twitter:image:alt" content="SGC TECH AI - Machine Speed, Human Expertise, Real Results" />
   </head>
 
   <body>
