--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <meta name="keywords" content="AI transformation, enterprise ERP, UAE business solutions, Dubai AI consulting, rapid deployment, guaranteed ROI, Scholarix Global" />
     <meta name="author" content="Scholarix Global Consultants" />
     
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#1E3A8A" />
+    <!-- Favicon - AI Brain Icon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#0A1628" />
+    <meta name="msapplication-TileColor" content="#0A1628" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
